# qt_plugin_metadata

./: CMakeLists.txt  main.cpp
